house_price_mlflow/mlflow/mlflow-server/mlflow-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mlflow
  namespace: mlflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mlflow

  template:
    metadata:
      labels:
        app: mlflow

    spec:
      serviceAccountName: mlflow-sa

      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: mlflow

        image: ghcr.io/veenayadav02/mlflow-server:v1

        ports:
        - containerPort: 5000

        command: ["mlflow"]

        args:
          - server
          - --host=0.0.0.0
          - --port=5000
          - --backend-store-uri=$(BACKEND_STORE_URI)
          - --artifacts-destination=$(ARTIFACT_ROOT)
          - --static-prefix=/mlflow
