house_price_mlflow/mlflow/mlflow-server/mlflow-manifest/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mlflow
  namespace: mlflow

spec:
  selector:
    app: mlflow

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
