house_price_mlflow/mlflow/mlflow-server/mlflow-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mlflow
  namespace: mlflow

  annotations:
    alb.ingress.kubernetes.io/group.name: mlops-coe
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /mlflow/
    alb.ingress.kubernetes.io/success-codes: "200"

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /mlflow
        pathType: Prefix

        backend:
          service:
            name: mlflow
            port:
              number: 5000
